More refactor